minor changes to code
no actual change just changes in the format so the code is easier to read

--- a/actual/Group3-MachineLearningProject.ipynb
+++ b/actual/Group3-MachineLearningProject.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f01c5aa5",
    "metadata": {},
    "outputs": [
@@ -264,9 +264,14 @@
     "}).reset_index()\n",
     "\n",
     "#setting column names\n",
-    "daily_data.columns = ['date', 'daily_revenue', 'daily_orders', \n",
-    "                     'avg_hour', 'peak_hour', 'day_of_week', \n",
-    "                     'month', 'card_usage_ratio']\n",
+    "daily_data.columns = ['date', \n",
+    "                     'daily_revenue', \n",
+    "                     'daily_orders', \n",
+    "                     'avg_hour', \n",
+    "                     'peak_hour', \n",
+    "                     'day_of_week', \n",
+    "                     'month', \n",
+    "                     'card_usage_ratio']\n",
     "\n",
     "#display\n",
     "daily_data.head()"
