--- a/basis/proj_prototype.ipynb
+++ b/basis/proj_prototype.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ab948e22",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
     "\n",
     "# Extract time features\n",
     "df['hour'] = df['datetime'].dt.hour\n",
-    "df['day_of_week'] = df['date'].dt.dayofweek  # Monday=0, Sunday=6\n",
+    "df['day_of_week'] = df['date'].dt.dayofweek \n",
     "df['month'] = df['date'].dt.month\n",
     "\n",
     "# Encode categorical features\n",
@@ -1254,7 +1254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml_env",
    "language": "python",
    "name": "python3"
   },
@@ -1268,7 +1268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
